--- a/FittrIOS/en.lproj/MainStoryboard.storyboard
+++ b/FittrIOS/en.lproj/MainStoryboard.storyboard
@@ -75,15 +75,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="42f-er-mj7" firstAttribute="centerX" secondItem="4w4-EA-ymb" secondAttribute="centerX" type="default" id="3nv-rm-mAr"/>
                             <constraint firstItem="4w4-EA-ymb" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="Btq-T8-Myc"/>
                             <constraint firstItem="4w4-EA-ymb" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="F8t-1u-AOT"/>
-                            <constraint firstAttribute="bottom" secondItem="42f-er-mj7" secondAttribute="bottom" constant="122" id="IJS-N3-sp1"/>
-                            <constraint firstItem="OmQ-q1-QLC" firstAttribute="centerX" secondItem="4w4-EA-ymb" secondAttribute="centerX" type="default" id="LTy-SH-16e"/>
                             <constraint firstItem="OmQ-q1-QLC" firstAttribute="centerX" secondItem="faf-b2-dRe" secondAttribute="centerX" type="default" id="N27-o7-4ct"/>
                             <constraint firstItem="OmQ-q1-QLC" firstAttribute="leading" secondItem="42f-er-mj7" secondAttribute="leading" type="default" id="NJD-QH-8Nj"/>
                             <constraint firstItem="faf-b2-dRe" firstAttribute="top" secondItem="3" secondAttribute="top" constant="11" id="TYu-dS-tYZ"/>
+                            <constraint firstAttribute="bottom" secondItem="42f-er-mj7" secondAttribute="bottom" constant="77" id="Tj4-jA-oL1"/>
+                            <constraint firstItem="42f-er-mj7" firstAttribute="top" secondItem="OmQ-q1-QLC" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="b4X-5W-SHm"/>
                             <constraint firstItem="4w4-EA-ymb" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="dQP-Hy-w6R"/>
-                            <constraint firstAttribute="bottom" secondItem="OmQ-q1-QLC" secondAttribute="bottom" constant="197" id="htY-sf-pmF"/>
                             <constraint firstItem="OmQ-q1-QLC" firstAttribute="trailing" secondItem="42f-er-mj7" secondAttribute="trailing" type="default" id="rco-x2-dnh"/>
                             <constraint firstItem="4w4-EA-ymb" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="vnU-0J-o66"/>
                         </constraints>
@@ -366,7 +366,6 @@
         <!--Table View Controller - Workouts-->
         <scene sceneID="7ys-L4-n5M">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="E1E-dz-Skf" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController title="Workouts" id="RaY-cS-CcR" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="WcU-jm-sk7">
                         <rect key="frame" x="0.0" y="20" width="320" height="499"/>
@@ -539,6 +538,7 @@
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
                     <nil key="simulatedTopBarMetrics"/>
                 </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E1E-dz-Skf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2162" y="2793"/>
         </scene>
@@ -672,14 +672,6 @@
         <image name="workouts.png" width="48" height="30"/>
         <image name="you.png" width="28" height="26"/>
     </resources>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
